--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Artificial Intelligence that helps you generate and optimize content for social media and websites"
+      content="სხვადასხვა ინდუსტრიაზე მორგებული ასეულობით ნიმუშებიდან აირჩიე
+      შენთვის სასურველი"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -41,7 +42,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Enchance your online presence</title>
+    <title>გააძლიერე შენი ონლაინ ხილვადობა</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
